<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_blue" >

    <ImageView
        android:id="@+id/AppLogo"
        android:layout_width="234dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mtatracker_logo" />

    <LinearLayout
        android:id="@+id/inputSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppLogo">

        <AutoCompleteTextView
            android:id="@+id/subwayStationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:completionThreshold="1"
            android:drawableStart="@drawable/subway_icon"
            android:drawablePadding="5dp"
            android:hint="@string/enter_station"
            android:minHeight="60dp" />

        <AutoCompleteTextView
            android:id="@+id/busStopInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:completionThreshold="0"
            android:drawableStart="@drawable/bus_icon"
            android:drawablePadding="5dp"
            android:hint="@string/enter_bus_stop"
            android:minHeight="60dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/MTAAvailabilityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/available_at_location"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/availableSubways"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:minHeight="60dp"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/busStopDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:minHeight="60dp"
            android:spinnerMode="dialog"
            android:visibility="gone" />

        <TextView
            android:id="@+id/MTADirectionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/route"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/subwayDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:minHeight="60dp"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/busRoutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:minHeight="60dp"
            android:spinnerMode="dialog"
            android:visibility="gone" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSection">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/subwayRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:checked="true"
            android:text="@string/subway"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/busRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/bus"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/search"
        android:textAlignment="center"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>